[package]
name = "lw"
version = "0.4.4"
authors = ["Daniel (dmilith) Dettlaff <dmilith@me.com>"]
description = "Log-Watcher utility - replacement for: `tail -F /some/path/*` - that uses Kqueue to watch also new files…"
keywords = ["kqueue", "log", "watch", "tail", "view"]
categories = ["filesystem"]
homepage = "https://github.com/VerKnowSys/lw"
license = "MIT"
edition = "2018"

[[bin]]
name = "lw"
path = "src/log_watcher.rs"

[dependencies]
log = "0.4" # generic Rust logger
fern = { version = "0.5", features = ["colored"] } # my fav Logger extension for Rust
colored = "1.6" # ANSI coloring for terminal
libc = "0.2" # access to libc functions
walkdir = "1.0" # recursive dir traversing
chrono = "0.4" # time and data utils
kqueue = "0.2" # kqueue Rust API for Kqueue
kqueue-sys = "0.2" # kqueue event system library wrapper
