[package]
name = "lw"
version = "0.6.0"
authors = ["Daniel (dmilith) Dettlaff <dmilith@me.com>"]
description = "Log-Watcher utility - replacement for: `tail -F /some/path/*` - that uses Kqueue to watch for new files as well…"
keywords = ["kqueue", "log", "watch", "tail", "view"]
categories = ["filesystem"]
homepage = "https://github.com/VerKnowSys/lw"
license = "MIT"
edition = "2018"

[[bin]]
name = "lw"
path = "src/log_watcher.rs"

[dependencies]
log = "0.4.14"
fern = { version = "0.6.0", features = ["colored"] } # my fav Logger extension for Rust
colored = "2.0.0"
walkdir = "2.3.1"
chrono = "0.4.19"
kqueue2 = "0.2.2"
kqueue2-sys = "0.1.5"
mimalloc = "0.1.24"
